--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.3",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.17"
@@ -23,6 +24,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.16",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.9.0",
     "typescript": "^5.2.2"
   }
