--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.3",
     "reflect-metadata": "^0.1.13",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "typeorm": "^0.3.17"
   },
   "devDependencies": {
@@ -29,6 +31,8 @@
     "@types/hbs": "^4.0.4",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.9.0",
+    "@types/swagger-jsdoc": "^6.0.3",
+    "@types/swagger-ui-express": "^4.1.6",
     "typescript": "^5.2.2"
   }
 }
